# strelka-ui

./: .dockerignore  .gitignore  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: build-on-push.yml  build_strelkaui_daily.yml  (+2 more)
app/: .pylintrc  app.py  example.env  manage.py  models.py  pyproject.toml  requirements.txt
app/blueprints/: auth.py  strelka.py  ui.py
app/config/: config.py
app/services/: auth.py  insights.py  strelka.py  virustotal.py
app/strelka/: strelka_pb2_grpc.py  submit_to_strelka.py
app/strelka_ui/: .env.example  __main__.py  example.env  models.py
app/strelka_ui/api/: __init__.py  resources.py
app/strelka_ui/blueprints/: auth.py  strelka.py  ui.py
app/strelka_ui/config/: config.py
app/strelka_ui/migrations/versions/: 1b23372700aa_add_s3_fields_for_resubmission.py  3671ee09c427_file_submission_updates.py  75efd7e8b30a_init.py
app/strelka_ui/services/: auth.py  files.py  insights.py  s3.py  strelka.py  virustotal.py
app/strelka_ui/strelka/: fileshot_config.txt  strelka.proto  strelka_pb2.py  strelka_pb2_grpc.py  submit_to_strelka.py
audit-issues/: BEST-001-rate-limiting.md  BEST-006-add-unit-tests.md  BEST-009-cors-configuration.md  DOC-001-enhance-readme.md  MAINT-002-remove-duplicate-function.md  MAINT-004-extract-virustotal-constants.md  MANUAL_ISSUE_CREATION.md  QUALITY-001-remove-commented-code.md  QUALITY-002-refactor-long-functions.md  README.md  SECURITY-001-add-security-headers.md  SECURITY-002-timezone-aware-datetime.md  SECURITY-003-cryptographic-random.md  SECURITY-004-exception-handling.md  SECURITY-005-file-path-validation.md  create-github-issues.sh
ui/: .env.example  README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
(+306 files in other folders)
