[tool.poetry]
name = "strelka-ui"
version = "2.43"
description = "Strelka's File Submission Portal"
authors = ["Paul Hutelmyer <Paul.Hutelmyer@Target.com>"]

[tool.poetry.dependencies]
flask = "^3.1.1"
flask-Cors = "^6.0.0"
flask-migrate = "^4.0.7"
flask-restx = "^1.3.0"
flask-sqlalchemy = "3.0.5"
grpcio = "^1.71.2"
grpcio-tools = "^1.65.0"
jsonschema = "^4.23.0"
ldap3 = "^2.9.1"
paste = "^3.10.1"
protobuf = "^5.29.6"
psycopg2-binary = "^2.9.10"
py7zr = "^0.22.0"
python = "~3.10.14"
python-dateutil = "^2.9.0-post.0"
python-dotenv = "^1.2.2"
python-magic = "^0.4.27"
rarfile = "^4.2"
requests = "^2.33.0"
sqlalchemy = "^1.4.54"
waitress = "^3.0.2"
jinja2 = "^3.1.6"
boto3 = "^1.40.2"
brotli = "^1.2.0"
mako = "^1.3.12"
pyasn1 = "^0.6.2"
urllib3 = "^2.6.3"
werkzeug = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
